--- a/README
+++ b/README
@@ -13,7 +13,9 @@ PO solicitou um sistema de validacao de financiamentos que será integrado ao si
 	3 - De acordo com a formula: (fator * valor) / 2
 	4 - Seguindo a regra de acordo com o resultado da formula: [negativos = INVALIDO], [Até 1000 = VALIDO], [Entre 1001 e 5000 = EXTRA], [Maior 5001 = BONUS]   
 
-
 - Story Sprint 2
+
+Ao realizarem a primeira integracao perceberam que o fator pode ser 0 <ZERO> em alguns casos, sendo necessario alterar a regra:
+	1 - Caso fator=0 <ZERO> o mesmo deverá ser desconsiderado e o valor deve ser dividido por 3, ficando a formula: (valor / 3)
 
 - Story Sprint 3
