--- a/README
+++ b/README
@@ -11,17 +11,22 @@ O PO irá solicitar implementações de negócio de forma incremental ao longo d
 		1 - O sistema atual informará o VALOR solicitado pelo cliente e um FATOR de credibilidade do mesmo cliente.
 		2 - O novo sistema deverá calcular e retornar uma das 4 opções: VALIDO, INVALIDO, EXTRA, BONUS.
 		3 - De acordo com a formula: (fator * valor) / 2
-		4 - Seguindo a regra de acordo com o resultado da formula: [negativos = INVALIDO], [Até 1000 = VALIDO], [Entre 1001 e 5000 = EXTRA], [Maior 5001 = BONUS]   
+		4 - Seguindo a regra de acordo com o resultado da formula: 
+		[negativos = INVALIDO], 
+		[Até 1000 = VALIDO], 
+		[Entre 1001 e 5000 = EXTRA], 
+		[Maior 5000 = BONUS]   
 
 - Story Sprint 2
 
 	Ao realizarem a primeira integracao perceberam que o fator pode ser 0 <ZERO> em alguns casos, sendo necessario alterar a regra:
-		1 - Caso fator=0 <ZERO> o mesmo deverá ser desconsiderado e o valor deve ser dividido por 3, ficando a formula: (valor / 3)
+		1 - Caso fator=0 <ZERO> o mesmo deverá ser desconsiderado 
+		e o valor deve ser dividido por 3, ficando a formula: (valor / 3)
 
 - Story Sprint 3
 	
 	Outra equipe da empresa desenvolveu uma sistema que fornece um indice mais preciso para efetuar o calculo da validacao.
-		1 - Antes de efutar o calculo, consultar uma API que proverá o indice da divisão, formula (fator * valor) / indiceApi
+		1 - Antes de efetuar o calculo, consultar uma API que proverá o indice da divisão, formula (fator * valor) / indiceApi
 			URL API: https://us-central1-fernando-machado.cloudfunctions.net/indice-validacao
 			Estrutura Retorno: {"indice":2}
 			
